--- a/style.css
+++ b/style.css
@@ -47,6 +47,30 @@ input{
   font-family: 'Roboto Mono', monospace;
   border-radius: .35rem;
 }
+.the-pass input{
+  width: 100%;
+  margin-bottom: 0;
+}
+.the-pass input:focus-within{
+ box-shadow: none;
+
+}
+.the-pass{
+  display: flex;
+  background-color: #fefefeb0;
+  color: #4a4b4d;
+  outline: none;
+  width: 70%;
+  margin: auto;
+  margin-bottom: 20px;
+  border: none;
+  font-size: 15px;
+  font-family: 'Roboto Mono', monospace;
+  border-radius: .35rem;
+}
+#show{
+  margin: auto 5px auto 10px;
+}
 .fav-color,.gender-div,.the-span{
   text-align: left;
   margin-bottom: 20px;
@@ -130,7 +154,7 @@ a:hover{
   cursor: pointer;
 }
 
-input:focus-within{ 
+input:focus-within,.the-pass:focus-within{ 
   /* background-color: white; */
   color: black;
   /* border-radius: 10px; */
@@ -162,7 +186,7 @@ span:visited{
   form{
     width: 100%;
   }
-  .input{
+  .input,.long1{
     width: 87%
   }
   #signin{
